--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,6 @@
 
   <load ="partials/footer.html" />
 
-  <script type="module" src="ts/main.ts"></script>
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
