add favorites page

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Advanced JavaScript and TypeScript: Tools and Best Practices</title>
+  <title>Favorites Exercises</title>
     
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,15 +14,9 @@
 <body>
   <load ="partials/header.html" />
 
-  <section class="home">
-    <load ="partials/hero.html" />
-
-    <load ="partials/exercises.html" />
-
-    <load ="partials/daily-sports.html" />
+  <section class="favorites">
+    <load ="partials/favorites.html" />
   </section>
-
-  <load ="partials/footer.html" />
 
   <script type="module" src="js/main.js"></script>
 </body>
