--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Advanced JavaScript and TypeScript: Tools and Best Practices</title>
+  <title>Get Body in shape</title>
     
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
   
+  <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
