Add exercise modal

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
   </section>
 
   <load ="partials/footer.html" />
+  <load ="partials/modal-exercise.html" />
 
   <script type="module" src="js/main.js"></script>
 </body>
