--- a/src/index.html
+++ b/src/index.html
@@ -32,12 +32,12 @@
               <div class="btn-search-wrapper">
                   <button class="btn-search-exersises is-hide js-clear-input" type="button">
                       <svg class="icon-x" width="18" height="18">
-                          <use href="/img/icons.svg#icon-x"></use>
+                          <use href="/images/icons.svg#icon-x"></use>
                       </svg>
                   </button>
                   <button class="btn-search-exersises" type="submit">
                       <svg class="icon-search" width="18" height="18">
-                          <use href="./img/icons.svg#icon-search"></use>
+                          <use href="./images/icons.svg#icon-search"></use>
                       </svg>
                   </button>
               </div>
