--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,6 @@
     <div class="content-filter-container container">
       <div class="filter-title-container">
           <p class="filter-title">Exercises <span class="js-title-slash is-hide">/</span><span class="js-title is-hide"></span></p>
-          <p class="filter-subtitle"></p>
       </div>
       <div class="filter-block">
           <form class="form-search-exersises is-hide" >
@@ -32,12 +31,12 @@
               <div class="btn-search-wrapper">
                   <button class="btn-search-exersises is-hide js-clear-input" type="button">
                       <svg class="icon-x" width="18" height="18">
-                          <use href="/img/icons.svg#icon-x"></use>
+                          <use href="/images/icons.svg#icon-x"></use>
                       </svg>
                   </button>
                   <button class="btn-search-exersises" type="submit">
                       <svg class="icon-search" width="18" height="18">
-                          <use href="./img/icons.svg#icon-search"></use>
+                          <use href="./images/icons.svg#icon-search"></use>
                       </svg>
                   </button>
               </div>
@@ -54,7 +53,6 @@
     <div class="container">
       <div class="main-layout">
         <load ="partials/exercises.html" />
-
         <load ="partials/daily-sport.html" />
       </div>
     </div>
