add scroll to top button

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,7 @@
 
   <load ="partials/footer.html" />
   <load ="partials/modal-exercise.html" />
+  <load ="partials/scroll-to-top.html" />
 
   <script type="module" src="js/main.js"></script>
 </body>
