add scroll to top button on Favorite page

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -17,6 +17,8 @@
   <section class="favorites">
     <load ="partials/favorites.html" />
   </section>
+  
+  <load ="partials/scroll-to-top.html" />
 
   <script type="module" src="js/main.js"></script>
 </body>
