--- a/src/favorites.html
+++ b/src/favorites.html
@@ -18,6 +18,6 @@
     <load ="partials/favorites.html" />
   </section>
 
-  <script type="module" src="js/main.js"></script>
+  <script type="module" src="js/favorites.js"></script>
 </body>
 </html>
