add scroll to top button

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -18,6 +18,8 @@
     <load ="partials/favorites.html" />
   </section>
 
+  <load ="partials/scroll-to-top.html" />
+
   <script type="module" src="js/favorites.js"></script>
 </body>
 </html>
