favorites side section

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -18,7 +18,12 @@
     <load data-url="partials/header.html" />
 
     <section class="favorites">
-      <load data-url="partials/favorites.html" />
+      <div class="container">
+        <div class="main-layout">
+          <load data-url="partials/favorites.html" />
+          <load data-url="partials/daily-sport.html" />
+        </div>
+      </div>
     </section>
 
     <script type="module" src="js/favorites.js"></script>
