--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
           </button>
           <button class="btn-search-exersises" type="submit">
             <svg class="icon-search" width="18" height="18">
-              <use href="/images/icons.svg#icon-search"></use>
+              <use href="./images/icons.svg#icon-search"></use>
             </svg>
           </button>
         </div>
