add scroll to top button

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -26,6 +26,7 @@
       </div>
     </section>
     <load data-url="partials/mobile-menu.html" />
+    <load data-url="partials/scroll-to-top.html" />
 
     <script type="module" src="js/main.js"></script>
     <script type="module" src="js/mobile-menu.js"></script>
