--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,7 @@
   <load data-url="partials/modal-exercise.html" />
   <load ="partials/mobile-menu.html" />
   <load ="partials/modal-exercise.html" />
+  <load data-url="partials/scroll-to-top.html" />
 
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
     integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
