--- a/src/favorites.html
+++ b/src/favorites.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <load data-url="partials/header.html" />
+    <div class="loader-start"></div>
 
     <section class="favorites">
       <div class="container">
