--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <load data-url="partials/header.html" />
-  <div id="loader" class="loader-start"></div>
+  <div class="loader-start"></div>
   <load data-url="partials/hero.html" />
 
   <div class="content-filter-container container">
