loader, favorites fix

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -16,7 +16,6 @@
   </head>
   <body>
     <load data-url="partials/header.html" />
-    <div class="loader-start"></div>
 
     <section class="favorites">
       <div class="container">
@@ -27,8 +26,8 @@
       </div>
     </section>
     <load data-url="partials/mobile-menu.html" />
-
-    <script type="module" src="js/main.js"></script>
+    <load data-url="partials/modal-exercise.html" />
+    
     <script type="module" src="js/mobile-menu.js"></script>
     <script type="module" src="js/favorites.js"></script>
   </body>
