--- a/src/favorites.html
+++ b/src/favorites.html
@@ -13,6 +13,8 @@
       rel="stylesheet"
     />
 
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
