smooth menu opening and disable scroll

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Favorites Exercises</title>
-    <meta name="description" content="Get Body in shape. Favorites">
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,8 +11,6 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
       rel="stylesheet"
     />
-
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -29,9 +26,14 @@
       </div>
     </section>
     <load data-url="partials/mobile-menu.html" />
-    <load data-url="partials/modal-exercise.html" />
-    <load data-url="partials/scroll-to-top.html" />
 
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script type="module" src="js/main.js"></script>
     <script type="module" src="js/mobile-menu.js"></script>
     <script type="module" src="js/favorites.js"></script>
   </body>
