--- a/src/favorites.html
+++ b/src/favorites.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Favorites Exercises</title>
-    <meta name="description" content="Get Body in shape. Favorites">
+    <meta name="description" content="Get Body in shape. Favorites" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
 
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
