--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,7 @@
     </div>
     <div class="filter-block">
       <form class="form-search-exersises is-hide" >
-        <input class="input-search-exersises" name="search" type="text" placeholder="Search" autocomplete="off">
-        </input>
+        <input class="input-search-exersises" name="search" type="text" placeholder="Search" />
         <div class="btn-search-wrapper">
           <button class="btn-search-exersises js-clear-input" type="reset">
             <span class="icon-x"></span>
