--- a/src/favorites.html
+++ b/src/favorites.html
@@ -20,14 +20,14 @@
   <body>
     <load data-url="partials/header.html" />
 
-    <section class="favorites">
+    <div class="favorites">
       <div class="container">
         <div class="main-layout">
           <load data-url="partials/favorites.html" />
           <load data-url="partials/daily-sport.html" />
         </div>
       </div>
-    </section>
+    </div>
     <load data-url="partials/mobile-menu.html" />
     <load data-url="partials/modal-exercise.html" />
     <load data-url="partials/scroll-to-top.html" />
