--- a/src/favorites.html
+++ b/src/favorites.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="js-favorites">
     <load data-url="partials/header.html" />
 
     <div class="favorites">
