favorites top padding

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -22,6 +22,12 @@
 
     <div class="favorites">
       <div class="container">
+        <div class="content-filter-container">
+          <div class="filter-title-container">
+            <p class="filter-title">Favorites</p>
+          </div>
+        </div>
+
         <div class="main-layout">
           <load data-url="partials/favorites.html" />
           <load data-url="partials/daily-sport.html" />
