--- a/src/favorites.html
+++ b/src/favorites.html
@@ -11,7 +11,9 @@
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
       rel="preload"
-      as="font" type="font/woff2" crossorigin="anonymous"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
     />
 
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
