favorites html, content height

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -23,20 +23,16 @@
   <body class="js-favorites">
     <load data-url="partials/header.html" />
 
-    <div class="favorites">
+    <main class="favorites">
       <div class="container">
-        <div class="content-filter-container">
-          <div class="filter-title-container">
-            <p class="filter-title">Favorites</p>
-          </div>
-        </div>
+        <p class="filter-title">Favorites</p>
 
         <div class="main-layout">
           <load data-url="partials/favorites.html" />
           <load data-url="partials/daily-sport.html" />
         </div>
       </div>
-    </div>
+    </main>
     <load data-url="partials/mobile-menu.html" />
     <load data-url="partials/modal-exercise.html" />
     <load data-url="partials/scroll-to-top.html" />
